# sourcing-engine

sourcing-engine/: .env.example  .gitignore  AUDIT-FIXES.md  CLAUDE.md  DEMO_SETUP.md  NATA-LIVE-PIPELINE-DEMO.json  NATA-LIVE-SCRAPE-OUTPUT.json  PIPELINE.md  README.md  REPORT-agent-connector.md  REPORT-bulk-connectors-3.md  REPORT-enrichment-ranking.md  REPORT-grantconnect-integration.md  REPORT-scrape-verification.md  alembic.ini  cli.py  docker-compose.yml  pyproject.toml
sourcing-engine/.superpowers/sdd/: base.txt  progress.md
sourcing-engine/data/: ato_benchmarks.csv  bulk.duckdb.wal  grantconnect_sources.yaml  origo_filter_spec.csv  source_registry.yaml
sourcing-engine/frontend/: .gitignore  next.config.mjs  package-lock.json  package.json  playwright.config.ts  tailwind.config.ts
sourcing-engine/frontend/app/: globals.css  layout.tsx  page.tsx
sourcing-engine/frontend/components/: Chat.tsx  Gauge.tsx  RunTrace.tsx  ShortlistTable.tsx  Sidebar.tsx
sourcing-engine/frontend/e2e/: demo.spec.ts
sourcing-engine/frontend/lib/: api.ts  shortlist.ts  types.ts
sourcing-engine/migrations/: env.py
sourcing-engine/migrations/versions/: 0001_init.py  0002_run_orchestration.py  0003_saved_runs.py
sourcing-engine/scripts/: apify_smoke_test.py  awards_demo.py  build_demo_cache.py  capture_nata_live_scrape.py  grantconnect_demo.py  micro_sourcing_demo.py  quality_eval.py  rank_demo.py  run_api_demo.py  run_nata_live_demo.py  serve_demo_ui.py  verify_call_surface.py
sourcing-engine/src/sourcing/: __init__.py  config.py  db.py  llm.py  orchestrator.py
sourcing-engine/tests/: conftest.py  helpers.py
sourcing-engine/tests/fixtures/: maps_place.json  nata_sites.json
sourcing-engine/tests/integration/: conftest.py  test_abn_bulk.py  test_abn_lookup.py  test_api_pg.py  (+12 more)
sourcing-engine/ui/: api_client.py  app.py
(+157 files in other folders)
