[project]
name = "sourcing-engine"
version = "0.1.0"
description = "Origo Off-Market Sourcing Engine — Step 1 (schema, Buy-Box agent, RAG source retrieval)"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "psycopg[binary]>=3.1",
    "pgvector>=0.2.5",
    "pyyaml>=6.0",
    "httpx>=0.27",
    "typer>=0.12",
    "rich>=13.7",
    "duckdb>=1.0",
    "fastapi>=0.115",
    "uvicorn>=0.30",
    "anthropic>=0.40",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "respx>=0.21",
]
# Analyst UI (Part D). Install with: pip install -e ".[ui]"
ui = [
    "streamlit>=1.38",
]
# Optional connector backends. Install with: pip install -e ".[connectors]"
# apify-client powers the scrape/agent connectors; redis is an optional cache.
connectors = [
    "apify-client>=3.0",  # 3.x Run object + logger= API used by base_scrape
    "redis>=5.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src", "."]
testpaths = ["tests"]
markers = [
    "integration: tests that require live services (Postgres + pgvector; the LLM connectivity test needs ANTHROPIC_API_KEY, or a local server when LLM_PROVIDER=ollama). Run with -m integration.",
]
addopts = "-ra"
asyncio_mode = "auto"

[tool.coverage.run]
source = ["sourcing"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
# UP042: keep `str, Enum` as specified in the plan (not enum.StrEnum).
ignore = ["E501", "UP042"]
